[gd_scene load_steps=3 format=3 uid="uid://bm6tvdknmjfn2"]

[ext_resource type="Script" uid="uid://d13nyd73be81k" path="res://Scenes/UI/Main Screen/Upper UI/Upper_UI.gd" id="1_jskeu"]
[ext_resource type="PackedScene" uid="uid://xfidfn44gpc8" path="res://Scenes/UI/Shop/shop_popup.tscn" id="2_0jxpd"]

[node name="UpperUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jskeu")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 65.0

[node name="Shop" type="Button" parent="."]
layout_mode = 0
offset_left = 748.0
offset_top = 8.0
offset_right = 921.0
offset_bottom = 54.0
text = "Shop (E)"

[node name="BuyZone" type="Button" parent="."]
layout_mode = 0
offset_left = 544.0
offset_top = 9.0
offset_right = 717.0
offset_bottom = 55.0
text = "Buy New Zone"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="BuyZone"]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(350, 150)
ok_button_text = "Confirm"
dialog_text = "Buy new zone for 500 Coins?"

[node name="AcceptDialog" type="AcceptDialog" parent="BuyZone"]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(350, 150)

[node name="Menu" type="Button" parent="."]
layout_mode = 0
offset_left = 956.0
offset_top = 8.0
offset_right = 1129.0
offset_bottom = 54.0
text = "Menu (ESC)"

[node name="Coins" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_right = 141.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Coins: 10"

[node name="Speed" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 34.0
offset_right = 141.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Speed: 0"

[node name="Zone" type="Label" parent="."]
layout_mode = 0
offset_left = 170.0
offset_top = 34.0
offset_right = 309.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0.58431375, 1, 1)
theme_override_font_sizes/font_size = 23
text = "Zone: 1"

[node name="ShopPopup" parent="." instance=ExtResource("2_0jxpd")]
layout_mode = 0

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 2.0
offset_right = 304.0
offset_bottom = 33.0
text = "Auto colect"

[connection signal="pressed" from="Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="BuyZone" to="." method="_on_buy_zone_pressed"]
[connection signal="confirmed" from="BuyZone/ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
